- Alteração do ba-card DadosMunicipais2. - Início da alteração dos indicadores orçamentários.

--- a/src/app/pages/tela1/legislacao/legislacao.html
+++ b/src/app/pages/tela1/legislacao/legislacao.html
@@ -4,7 +4,7 @@
     <tr class="black-muted-bg">
       <td class="legislacao-icons"> </td>
 
-      <td > <img src="{{ ( 'legislacao'| baProfilePicture ) }}" width="40" height="50" > <b> LEGISLAÇÃO </b> <br>
+      <td > <img src="{{ ( 'legislacao-black'| baProfilePicture ) }}" width="40" height="50" > <b> LEGISLAÇÃO </b> <br>
         Relação e acesso à toda Legislação pertinente em relação
         ao tema e norteadora dos indicadores do projeto</td>
     </tr>
