--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -1,53 +1,36 @@
-<div class="typography-document-samples row">
-
-          <h1>
-            <p class="fonte"> SOBRE </p>
-            <p class="fonte"> <b> O PROJETO </b> </p>
-
-          </h1>
+<div>
+            <h5> SOBRE  </h5>
+            <p >  <strong>   O PROJETO  </strong>  </p>
 
           <hr color="white">
+               <p> O projeto pretende estruturar uma ação coordenada e estratégica do MPRJ
+                para fiscalizar e exigir a implementação adequada da Política de Assistência
+                 Social, bem como provocar a intervenção dos atores sociais vocacionados
+                 para esta política pública. </p>
 
-          <p> O projeto pretende estruturar uma ação coordenada e estratégica do MPRJ</p>
-          <p> para fiscalizar e exigir a implementação adequada da Política de Assistência </p>
-          <p> Social, bem como provocar a intervenção dos atores sociais vocacionados</p>
-          <p> para esta política pública. </p>
-  &nbsp;
-
-          <br>
           <ul style="list-style-type:disc ">
             <li> Exigir a implementação integral da Política de Assistência Social; </li>
-            &nbsp;
-            &nbsp;
             &nbsp;
             &nbsp;
             <li> Construção de uma metodologia de trabalho nova; </li>
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
+
             <li> Criação de indicadores para dimensionamento da oferta e demanda; </li>
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
+
             <li> Estabelecer, mediante diálogo com todas as Tutelas Coletivas do MPRJ, padrões
               de referência para avaliação da quantidade e qualidade dos serviços ofertados; </li>
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
+
             <li> Monitorar os padrões de referência por meio de indicadores; </li>
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
+
             <li> Articular parcerias com instâncias de controle social para fomentação da
               fiscalização do SUAS; </li>
-            &nbsp;
-            &nbsp;
           </ul>
-
-
 </div>
 
