--- a/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.html
+++ b/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.html
@@ -1,5 +1,5 @@
-<div>
-  <p> INDICADORES ORÇAMENTÁRIOS 2015 </p>
+<div align="right">
+  <p> 2015 </p>
 <ul>
   <li><a href="#"><img src="{{ ( 'seta-down2'| baProfilePicture ) }}" width="35px" height="35px" > </a>
     <ul id="barra-de-rolagem">
