--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
@@ -1,41 +1,43 @@
-<div>
-<div >
-  <div  class="col-xl-5 col-lg-5 col-md-5">
-    <table>
+<div  class="col-xl-5 col-lg-5 col-md-5">
+    <table border="0">
       <tr>
         <td class="alinhaesq"> MUNICÍPIO <p class="municipio"> Barra do <br> Piraí </p></td>
         <td class="alinhadir"> FAMÍLIAS <br> VULNERÁVEIS  <p class="dados"> 9.014</p></td>
       </tr>
 
-      <tr>
-        <td > PERCENTUAL <br> MUNICIPAL <p class="percentual"> 9,89% </p> </td>
-        <td> PERCENTUAL <br> ESTADUAL <p class="percentual"> 0,63% </td>
+      <tr >
+        <td> PERCENTUAL <br> DO MUNICÍPIO <p class="percentual"> 9,89% </p> </td>
+        <td> PERCENTUAL <br> DO ESTADO <p class="percentual"> 0,63% </td>
       </tr>
-    </table>
 
-  <hr>
+     <hr>
 
-    <table>
+
       <tr>
         <td> TOTAL DE <br> EQUIPAMENTOS <p class="totalequipamentos"> 5 </p></td>
-        <td> PERCENTUAL <br> ESTADUAL <p class="percentual"> 0,86% </p></td>
+        <td> PERCENTUAL <br> DO ESTADO <p class="percentual"> 0,86% </p></td>
       </tr>
-    </table>
+
 
     <hr>
-
-    <table>
-      <tr class="alinhacentro">
-        <td> CRAS <p class="equipamentos"> 4 </p> </td>
-        <td> | </td>
-        <td> CREAS <p class="equipamentos"> 1 </p></td>
-        <td> | </td>
-        <td> CENTRO POP <p class="equipamentos"> 1 </p></td>
-      </tr>
-
     </table>
 
-  </div>
+  <table>
+    <tr class="alinha-equipamentos">
+      <td> CRAS </td>
+      <td> CREAS </td>
+      <td> CENTRO POP </td>
+    </tr>
 
-</div>
+    <tr class="equipamentos">
+     <td> 4 </td>
+     <td> 1 </td>
+     <td> 0 </td>
+    </tr>
+  </table>
+
+
+
+
+
 </div>
