--- a/src/app/pages/tela2/programas/programas.html
+++ b/src/app/pages/tela2/programas/programas.html
@@ -1,18 +1,13 @@
 <div>
-  <table>
-    <tr>
-      <td> TOTAL DE RECURSOS </td>
-      <td class="utilizado">  UTILIZADO </td>
-      <td class="nao-utilizado">  NÃO UTILIZADO </td>
-    </tr>
+  <h5> PROGRAMAS </h5>
+  <p> 300,00 </p>
+  <hr>
 
-    <tr>
-      <td> 300,00 </td>
-      <td class="utilizado"> 300,00 </td>
-      <td class="nao-utilizado"> 0,00 </td>
-    </tr>
+  <p>  300,00 </p>
+  <hr>
 
-  </table>
+  <p>  0,00 </p>
+  <hr>
 </div>
 
 <div class="centro">
