--- a/src/app/pages/tela2/psb/psb.html
+++ b/src/app/pages/tela2/psb/psb.html
@@ -1,18 +1,14 @@
 <div>
-  <table>
-    <tr>
-      <td> TOTAL DE RECURSOS </td>
-      <td class="utilizado">  UTILIZADO </td>
-      <td class="nao-utilizado">  NÃO UTILIZADO </td>
-    </tr>
+    <h5> PSB </h5>
+    <p> 271.200,00 </p>
+    <hr>
 
-    <tr>
-      <td> 271.200,00 </td>
-      <td class="utilizado">  24.000,00 </td>
-      <td class="nao-utilizado">  247.200,00 </td>
-    </tr>
+    <p>  24.000,00 </p>
+    <hr>
 
-  </table>
+    <p> 247.200,00</p>
+    <hr>
+
 </div>
 
 <div class="centro">
