--- a/src/app/pages/tela2/pse/pse.html
+++ b/src/app/pages/tela2/pse/pse.html
@@ -1,18 +1,13 @@
 <div>
-  <table>
-    <tr>
-      <td> TOTAL DE RECURSOS </td>
-      <td class="utilizado">  UTILIZADO </td>
-      <td class="nao-utilizado">  NÃO UTILIZADO </td>
-    </tr>
+    <h5> PSE </h5>
+    <p> 146.835,10 </p>
+    <hr>
 
-    <tr>
-      <td> 146.835,10 </td>
-      <td class="utilizado">  38.334,04 </td>
-      <td class="nao-utilizado">  108.501,06 </td>
-    </tr>
+    <p>  38.334,04 </p>
+    <hr>
 
-  </table>
+    <p>  108.501,06 </p>
+    <hr>
 </div>
 
 <div class="centro">
