--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -53,16 +53,20 @@
 </div>
 
 <div class="row">
-  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
-      <ba-card title="PSE"> <pse> </pse></ba-card>
+  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+       <pse> </pse>
   </div>
 
-  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
-      <ba-card title="PSB"> <psb> </psb></ba-card>
+  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+      <psb> </psb>
   </div>
 
-  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
-      <ba-card title="PROGRAMAS"> <programas> </programas></ba-card>
+  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+      <programas> </programas>
+  </div>
+
+  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+    <indicadores-orcamentarios> </indicadores-orcamentarios>
   </div>
 
 </div>
