--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.scss
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.scss
@@ -21,6 +21,8 @@
   font-size: 10px;
   color:black;
   text-align: right;
+  background-color: #c1ccc8;
+  opacity: 0.9;
 }
 
 .negrito{
@@ -48,6 +50,7 @@ font-weight: bold;
   font-size: 15px;
   color: orange;
   float: right;
+  background: linear-gradient(blue,blue, #c1ccc8,#c1ccc8);
 }
 
 
