Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) - (modificando tabela resultado da consulta) - (resultado da consulta ok ) - (organização da 2ª tela ) - (arrumando 2ª tela.1) - (organizando 2ª tela) -

--- a/src/app/pages/tela4/tela4.html
+++ b/src/app/pages/tela4/tela4.html
@@ -19,11 +19,11 @@
       <ba-card class="col-xl-6 col-xl-15"
                title="FALE CONOSCO" baCardClass="feed-panel">
         &nbsp;
-        <img src="{{ ( 'porte'| baProfilePicture ) }}" width="860" height="115">
+        <img src="{{ ( 'porte'| baProfilePicture ) }}" width="820" height="115">
         <h4> <b> <img src="{{ ( 'fale conosco'| baProfilePicture ) }}" width="45" height="45"> &nbsp;Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </b> </h4>
         <h4> <b> <img src="{{ ( 'email'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653 </b> </h4>
 
-        <hr color="white">
+        <hr color="grey">
 
         <label class="col-sm-1 form-control-label" for="inputEmail3"><b>NOME</b></label>
         <div class="col-sm-10">
@@ -100,7 +100,7 @@
           </div>
         </div>
 
-          <hr color="white">
+          <hr color="grey">
 
           <div class="panel panel-default">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwO">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>2. QUAIS OS DIAS E HORÁRIOS DE FUNCIONAMENTO DO CRAS?</b></h4></a>
@@ -111,7 +111,7 @@
             </div>
 
 
-            <hr color="white">
+            <hr color="grey">
 
             <div class="panel panel-default">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>3. QUAIS SÃO AS FAIXAS ETÁRIAS DO SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS?</b></h4></a>
@@ -121,7 +121,7 @@
                 </div>
               </div>
 
-              <hr color="white">
+              <hr color="grey">
 
               <div class="panel panel-default">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS?</b></h4></a>
@@ -132,8 +132,6 @@
                 </div>
 
 
-                <hr color="white">
-
-
+                <hr color="grey">
 
 
