--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -33,7 +33,7 @@
       <img src="{{ ( 'ajuda' | baProfilePicture ) }}" width="35px" height="35px"> Ajuda
     </a>
 
-    <a href="https://www.mds.gov.br/">
+    <a href="http://aplicacoes.mds.gov.br/sagi/portal/">
       <img src="{{ ( 'sitio-mds' | baProfilePicture ) }}" width="25px" height="25px"> MDS
     </a>
     </div>
