- Ajuste dos botões: municipiosButtons, equipamentoButtons e anoButtons. ( telas 1 e 2 ) - Alteração dos componentes: pse, psb e programas. ( tela 2 ) - Mudança na cor da fonte da tipografia. ( tela 1 ) - Retirada do ba-card Indicadores referentes as últimas inspeções, e ajuste dos componentes desse card.

--- a/src/app/pages/tela1/buttons/components/equipamentoButtons/equipamentoButtons.html
+++ b/src/app/pages/tela1/buttons/components/equipamentoButtons/equipamentoButtons.html
@@ -1,13 +1,18 @@
-<div class="btn-group flex-dropdown" dropdown>
-      <button type="button" class="btn bg-primary" dropdownToggle addToggleClass="true">Tipo de Equipamento
-        <span class="sr-only">Toggle Dropdown</span></button>
-      <ul class="dropdown-menu" dropdownMenu>
-        <li class="dropdown-item"><a href="#"> CRAS </a></li>
-        <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><a href="#"> CREAS </a></li>
-        <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><a href="#"> CENTRO POP</a></li>
-         <li class="dropdown-divider"></li>
-      </ul>
+<div class=" alinha-direita">
+<div class="col-sm-4 col-xs-6 col-lg-4 col-md-6">
+  <div class="btn-group flex-dropdown" dropdown>
+    <button type="button" class="btn bg-outline-default"> Tipo de Equipamento</button>
+    <button type="button" class="btn bg-outline-default" dropdownToggle addToggleClass="true">
+      <span class="sr-only">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu" dropdownMenu>
+      <li class="dropdown-item"><a href="#"> CRAS </a></li>
+      <li class="dropdown-divider"></li>
+      <li class="dropdown-item"><a href="#"> CREAS </a></li>
+      <li class="dropdown-divider"></li>
+      <li class="dropdown-item"><a href="#"> CENTRO POP</a></li>
+      <li class="dropdown-divider"></li>
+    </ul>
+  </div>
 </div>
-
+</div>
