--- a/src/app/pages/tela1/buttons/components/equipamentoButtons/equipamentoButtons.scss
+++ b/src/app/pages/tela1/buttons/components/equipamentoButtons/equipamentoButtons.scss
@@ -7,3 +7,8 @@ ul li a:hover{
   background-color: lightslategray;
   text-decoration: underline;
 }
+
+.alinha-direita{
+  float: right;
+  text-align:right;
+}
