--- a/src/app/pages/tela1/tela1.html
+++ b/src/app/pages/tela1/tela1.html
@@ -3,11 +3,18 @@
     <typography></typography>
   </div>
 
-  <ba-card title="Indicadores referentes às últimas inspeções em cada município" class="col-xlg-7 col-lg-7  col-md-7 col-sm-7 col-xs-7">
-      <e-buttons></e-buttons>
+
+
+
+  <div>
+    <!-- INDICADORES REFERENTES ÀS ÚLTIMAS INSPEÇÕES EM CADA MUNICÍPIO -->
+    <e-buttons></e-buttons>
+  </div>
+
+  <div class="col-xlg-7 col-lg-7  col-md-7 col-sm-7 col-xs-7">
       <contextual-table></contextual-table>
       <chartist></chartist>
-  </ba-card>
+  </div>
   </div>
 
 <div class="row">
