--- a/src/app/pages/tela1/typography/typography.scss
+++ b/src/app/pages/tela1/typography/typography.scss
@@ -1,16 +1,17 @@
 p{
-  color: #00003d;
+  color: #000000;
 }
 
 li{
   font-size: 15px;
-  color: #00003d;
+  color: #000000;
   opacity: 0.9;
 }
 
 h5{
-  color: #00003d;
+  color: #000000;
   opacity: 0.9;
+  float: left;
 }
 
 
