--- a/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.html
+++ b/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.html
@@ -1,7 +1,7 @@
 <div align="right">
-  <p> 2015 </p>
-<ul>
-  <li><a href="#"><img src="{{ ( 'seta-down2'| baProfilePicture ) }}" width="35px" height="35px" > </a>
+
+  <ul>
+  <li>  <a href="#">  <span> 2015 </span> <img src="{{ ( 'seta-down2'| baProfilePicture ) }}" width="35px" height="35px" > </a>
     <ul id="barra-de-rolagem">
       <li><a href="#"> 2017 </a></li>
       <li><a href="#"> 2016 </a></li>
