--- a/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.html
+++ b/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.html
@@ -1,11 +1,11 @@
 <div>
   <h5> &nbsp; </h5>
-  <p> TOTAL DE RECURSOS </p>
+  <p class="paragrafo"> TOTAL DE RECURSOS </p>
   <hr>
 
-  <p> UTILIZADO </p>
+  <p class="paragrafo util"> UTILIZADO </p>
   <hr>
 
-  <p> NÃO UTILIZADO ( OMISSÃO OU BLOQUEIO )</p>
-  <hr>
+  <p class="paragrafo nao-util"> NÃO UTILIZADO ( OMISSÃO OU BLOQUEIO )</p>
+
 </div>
