--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -33,6 +33,12 @@
 </ba-card>
 </div>
 
+<!-- <div class="row">
+  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <ano-buttons></ano-buttons>
+  </div>
+</div> -->
+
 
 <div class="row">
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -41,34 +47,40 @@
     <dados-municipais> </dados-municipais>
   </div>
 
-  <div>
+  <div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 col-xs-5">
     <indicadores-sociais> </indicadores-sociais>
   </div>
 
-  </div>
-</div>
 
-<div>
-  <ano-buttons></ano-buttons>
-</div>
+    <div>
+      <ano-buttons></ano-buttons>
 
-<div class="row">
-  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-       <pse> </pse>
-  </div>
+    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+      <pse> </pse>
+    </div>
 
-  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
       <psb> </psb>
-  </div>
+    </div>
 
-  <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
+    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
       <programas> </programas>
-  </div>
+    </div>
 
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <indicadores-orcamentarios> </indicadores-orcamentarios>
-  </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
+      <indicadores-orcamentarios> </indicadores-orcamentarios>
+    </div>
+      </div>
 
+  </div>
 </div>
+
+<br>
+
+
+
+
+
+
 
 
