Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) - (modificando tabela resultado da consulta) - (resultado da consulta ok ) - (organização da 2ª tela ) - (arrumando 2ª tela.1) - (organizando 2ª tela) - (organizando botões) -

--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -44,9 +44,9 @@
                title="TIPO DE INSPEÇÃO*" baCardClass="small-card">
         <div class="bs-example">
           <div class="btn-group-justified">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#" class="btn btn-primary"><b>CRAS</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <a href="#" class="btn btn-primary"><b>CREAS</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <a href="#" class="btn btn-primary"><b>CENTRO POP</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class="btn btn-raised btn-info"><h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>CRAS</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5></a>
+            &nbsp;&nbsp;&nbsp;<a class="btn btn-raised"><h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CREAS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5></a>
+            &nbsp;&nbsp;&nbsp;<a class="btn btn-raised"><h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CENTRO POP&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5></a>
           </div>
         </div>
       </ba-card>
@@ -55,9 +55,9 @@
       <ba-card class="col-xl-6 col xl-0"
                title="EIXOS*" baCardClass="small-card">
         <div class="button-wrapper">
-          <button type="button" class="btn btn-default btn-raised"><b>EQUIPE TÉCNICA</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>INFRAESTRUTURA</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>PROGRAMAS,PROJETOS,SERVIÇOS E BENEFÍCIOS</b></button>
+          &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <a class="btn btn-raised btn-royal"><h5>EQUIPE TÉCNICA</h5></a>
+          &nbsp;&nbsp;&nbsp;<a class="btn btn-raised btn-royal"><h5>INFRAESTRUTURA</h5></a>
+          &nbsp;&nbsp;&nbsp; <a class="btn btn-raised btn-royal"><h5>PROGRAMAS, PROJETOS E BENEFÍCIOS</h5></a>
         </div>
       </ba-card>
     </div>
@@ -69,20 +69,20 @@
                title="MUNICÍPIO*" baCardClass="small-card">
         <div class="button-wrapper">
           <div class="buttor-wrapper" dropdown>
-          <button type="button" class="btn btn-default btn-raised"><b>ANGRA DOS REIS</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>BARRA DO PIRAÍ</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>NITERÓI</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>SÃO GONÇALO</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>RIO DE JANEIRO</b></button>
+            &nbsp;<a class="btn btn-raised btn-royal"><h5>ANGRAS DOS REIS</h5></a>
+            &nbsp;<a class="btn btn-raised btn-royal"><h5>BARRA DO PIRAÍ</h5></a>
+            &nbsp;<a class="btn btn-raised btn-royal"><h5>NITERÓI</h5></a>
+            &nbsp;<a class="btn btn-raised btn-royal"><h5>SÃO GONÇALO</h5></a>
+            &nbsp;<a class="btn btn-raised btn-royal"><h5>RIO DE JANEIRO</h5></a>
 
-            <button addtogleclass="true" class="btn btn-default dropdown-toggle" dropdownToggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
+            &nbsp;<button addtogleclass="true" class="btn btn-raised dropdown-toggle" dropdownToggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
               <b>MACAÉ</b>
             </button>
             <ul class="dropdown-menu" dropdownMenu>
               <li class="dropdown-item"><a href="#"> A </a></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><a href="#"> Aperibé</a></li>
-              <li class="dropdown-item"><a href="#"> Araruama </a></li>
+              <li class="dropdown-item"><a> Aperibé</a></li>
+              <li class="dropdown-item"><a> Araruama </a></li>
               <li class="dropdown-item"><a href="#"> Areal </a></li>
               <li class="dropdown-item"><a href="#"> Armação dos Búzios </a></li>
               <li class="dropdown-item"><a href="#"> Arraial do Cabo </a></li>
@@ -241,17 +241,12 @@
 
 
 
-
-
-
-
-
       <ba-card class="col-xl-6 col-xl-0"
                title="EQUIPAMENTO*" baCardClass="small-card with-scroll feed-panel">
         <div class="button-wrapper">
-          <button type="button" class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ CENTRO</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ AREAL</b></button>
-          <button type="button" class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ AREAL</b></button>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ CENTRO</b></a>
+          &nbsp;&nbsp;&nbsp;<a class="btn btn-default btn-raised"><b>CRAS BARRA DO PIRAÍ AREAL</b></a>
+          &nbsp;&nbsp;&nbsp;<a class="btn btn-raised btn-royal"><b>CRAS BARRA DO PIRAÍ AREAL</b></a>
         </div>
       </ba-card>
     </div>
