--- a/src/app/pages/tela4/tela4.html
+++ b/src/app/pages/tela4/tela4.html
@@ -135,3 +135,25 @@
                 <hr color="grey">
 
 
+                <a href="#" class="btn btn-white">Button</a>
+                <a href="#" class="btn btn-raised color-primary btn-white">Button</a>
+
+                <a href="#" class="btn btn-raised btn-white">Button</a>
+                <a href="#" class="btn btn-raised color-info btn-white">Button</a>
+                <a href="#" class="btn btn-raised color-success btn-white">Button</a>
+                <a href="#" class="btn btn-raised color-warning btn-white">Button</a>
+                <a href="#" class="btn btn-raised color-danger btn-white">Button</a>
+                <a href="#" class="btn btn-raised color-royal btn-white">Button</a>
+
+                <a href="#" class="btn btn-raised btn-default">Button</a>
+                <a href="#" class="btn btn-raised btn-info">Button</a>
+                <a href="#" class="btn btn-raised btn-success">Button</a>
+                <a href="#" class="btn btn-raised btn-warning">Button</a>
+                <a href="#" class="btn btn-raised btn-danger">Button</a>
+                <a href="#" class="btn btn-raised btn-royal">Button</a>
+                <a href="#" class="btn btn-raised btn-info">Button</a>
+
+
+
+
+
