-Ajuste dos cards: Lista de Equipamentos da Assistência Social e Indicadores Orçamentários .

--- a/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.html
+++ b/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.html
@@ -1,11 +1,32 @@
-<div>
-  <h5> &nbsp; </h5>
-  <p class="paragrafo"> TOTAL DE RECURSOS </p>
-  <hr>
+<div class="horizontal-scroll">
+  <table class="tabela" width="500px" height="340px" border="0">
+    <thead>
+    <tr class="black-muted-bg">
+      <th colspan="4" class="cabeçalho"> INDICADORES ORÇAMENTÁRIOS  </th>
+    </tr>
+    </thead>
 
-  <p class="paragrafo util"> UTILIZADO </p>
-  <hr>
+    <tbody>
 
-  <p class="paragrafo nao-util"> NÃO UTILIZADO ( OMISSÃO OU BLOQUEIO )</p>
+    <tr>
+     <td>
+      <pse> </pse>
+     </td>
+
+      <td>
+        <psb> </psb>
+      </td>
+
+      <td>
+        <programas> </programas>
+      </td>
+
+      <td>
+      <indicadores-orcamentarios-legenda> </indicadores-orcamentarios-legenda>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
 
 </div>
