--- a/src/app/pages/tela2/indicadoresOrcamentariosLegenda/indicadoresOrcamentariosLegenda.scss
+++ b/src/app/pages/tela2/indicadoresOrcamentariosLegenda/indicadoresOrcamentariosLegenda.scss
@@ -1,6 +1,6 @@
 .paragrafo {
-  color: black;
-  font-size: 13px;
+  color: #1d1d1d;
+  font-size: 15px;
   font-weight: normal;
 }
 
@@ -19,7 +19,7 @@
   background-color:steelblue;
 }
 
-table{
-  background-color: #c1ccc8;
-  opacity: 0.9;
+.hr{
+margin-top: 10px;
+  vertical-align: bottom;
 }
