--- a/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.html
+++ b/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.html
@@ -1,54 +1,62 @@
 <div class="horizontal-scroll">
+  <table class="tabela" width="50%" border="0">
+    <thead>
+    <tr class="black-muted-bg">
+      <th colspan="4" class="cabeçalho"> LISTA DE EQUIPAMENTOS DA ASSISTÊNCIA SOCIAL </th>
+    </tr>
+    </thead>
 
-  <table class="tabela">
-
+<tbody>
+<tr>
+  <e-buttons></e-buttons>
+</tr>
     <tr>
       <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
         <td class="equipamento">
-        <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - CENTRO <hr>
+        <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - CENTRO
         <p class="parágrafo"> Rua José Ferreira Aguiar ( Antiga Rua Ana Nery),128 - Centro - Barra do Piraí</p>
           <p class="parágrafo"> <i class="ion-email"></i>  27.123-150
-            <i class="ion-ios-telephone"></i>  24 2443-1087</p>
+            <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="12" height="12">  24 2443-1087</p>
                   Porte <p class="parágrafo"> GRANDE </p>
         </td>
+          </ba-card>
 
-      </ba-card>
 
       <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
         <td class="equipamento">
-        <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - CALIFÓRNIA DA BARRA <hr>
+        <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - CALIFÓRNIA DA BARRA
         <p class="parágrafo"> Rua 32, 142 e 148 - Morada do Vale - Califórnia - Barra do Piraí </p>
            <p class="parágrafo"> <i class="ion-email"></i> 27.163-000
-             <i class="ion-ios-telephone"></i> 24 3347-8451</p>
+             <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="12" height="12"> 24 3347-8451</p>
                   Porte <p class="parágrafo"> MÉDIO </p>
         </td>
       </ba-card>
+
     </tr>
 
 
     <tr>
       <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
         <td class="equipamento">
-        <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - AREAL <hr>
+        <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - AREAL
         <p class="parágrafo"> Rua Teresópolis, 52 - Areal - Barra do Piraí </p>
           <p class="parágrafo"> <i class="ion-email"></i> 27.150-090
-            <i class="ion-ios-telephone"> </i> 24 2445-1546</p>
+            <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="12" height="12"> 24 2445-1546</p>
                   Porte <p class="parágrafo"> PEQUENO </p>
         </td>
       </ba-card>
 
-        <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
-          <td class="equipamento">
-            <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - VARGEM ALEGRE <hr>
+      <ba-card class="col-xlg-6 col-xl-6 col-lg-6 col-sm-6 col-xs-6">
+         <td class="equipamento">
+            <img src="{{ ( 'equipamento'| baProfilePicture ) }}" width="30" height="25" > CRAS - VARGEM ALEGRE
           <p class="parágrafo">  Rua Elias Antônio, 26 - Santa Rosa - Vargem Alegre - Barra do Piraí </p>
             <p class="parágrafo">  <i class="ion-email"></i>  27.155-000
-              <i class="ion-ios-telephone"></i>  24 2430-21471</p>
+              <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="12" height="12"> 24 2430-21471</p>
                   Porte <p class="parágrafo"> GRANDE </p>
           </td>
-        </ba-card>
+      </ba-card>
     </tr>
+</tbody>
   </table>
-
-
 
 </div>
