--- a/src/app/pages/tela2/pse/pse.scss
+++ b/src/app/pages/tela2/pse/pse.scss
@@ -70,7 +70,7 @@
     line-height: 84px;
     z-index: 2;
     font-size: 16px;
-    color: lightgray;
+    color: #000000;
   }
 
   .percent:after {
@@ -99,3 +99,6 @@
 
 }
 
+.fundo-div{
+  background-color: #2F96E8;
+}
