--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
@@ -1,5 +1,5 @@
 <div>
-   <table border="0">
+   <table width="95%">
       <tr bgcolor="steelblue">
         <th class="estado" colspan="3"> ESTADO <p class="fonte"> RIO DE JANEIRO </p></th>
       </tr>
@@ -8,11 +8,11 @@
         <td class="alinhaesq"> FAMÍLIAS <br> VULNERÁVEIS <p class="dados"> 1.430.427</p></td>
       </tr>
 
-      <tr>
-        <td class="alinhadir"> TOTAL DE EQUIPAMENTOS <p class="dados"> 583 </p></td>
+     <tr>
+        <td class="alinhadir"> TOTAL DE  EQUIPAMENTOS <p class="dados"> 583 </p></td>
       </tr>
 
-      <hr color="white">
+     <hr>
 
      <tr>
        <td class="alinhacentro"> CRAS <p class="dados"> 450 </p> </td>
