--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -16,34 +16,22 @@
       <municipios-buttons></municipios-buttons>
     </div>
 
-
   </div>
 </div>
 
-
-
-<div>
-<ba-card title="Lista de Equipamentos da Assistência Social" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
-<e-buttons></e-buttons>
+<br>
 
 <div class="row">
+  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <lista-equipamentos></lista-equipamentos>
 </div>
 
-</ba-card>
 </div>
 
-<!-- <div class="row">
-  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <ano-buttons></ano-buttons>
-  </div>
-</div> -->
-
+<br>
 
 <div class="row">
-  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-  <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
+  <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-1">
     <dados-municipais> </dados-municipais>
   </div>
 
@@ -51,31 +39,22 @@
     <indicadores-sociais> </indicadores-sociais>
   </div>
 
-
     <div>
-      <ano-buttons></ano-buttons>
-
-    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-      <pse> </pse>
-    </div>
-
-    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-      <psb> </psb>
-    </div>
-
-    <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-      <programas> </programas>
-    </div>
-
-    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
       <indicadores-orcamentarios> </indicadores-orcamentarios>
     </div>
-      </div>
-
-  </div>
 </div>
 
+    <div class="row">
+      <ano-buttons></ano-buttons>
+    </div>
+
+
+
+
 <br>
+
+
+
 
 
 
