--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -1,5 +1,5 @@
 <div>
-    <table border="0">
+    <table>
      <thead>
       <tr class="black-muted-bg">
         <th colspan="4" class="cabeçalho"> INDICADORES SOCIAIS </th>
