--- a/src/app/pages/tela2/psb/psb.scss
+++ b/src/app/pages/tela2/psb/psb.scss
@@ -93,16 +93,16 @@
 }
 
 p{
-  color: #1d1d1d;
+  color: #000000;
   font-size: 15px;
   font-weight: bold;
 }
 
 h5{
-  color: #1d1d1d;
+  color: #000000;
   font-size: 13px;
   font-weight: bold;
-  text-align: right;
+  text-align: left;
 }
 
 .utilizado{
